# GTD

./: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: package.yml
scripts/: prepare-tauri-resources.mjs  run-tauri.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
